<resources>
    <string name="app_name">WorkoutDB</string>

    <string name="start_string">Start Time:</string>

    <string name="end_time_string">End Time:</string>

    <string name="addrs_string">Address:</string>

    <string name="date_string">Date:</string>

    <string name="branch_string">Branch:</string>

    <string name="desc_string">Description:</string>

    <string name="start_time_string">00:00:00</string>

    <string name="update_button">Update data</string>

</resources>
