<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:background="@color/Reka"
              android:orientation="vertical"
              tools:context="sadika.roi.workoutdb.MainActivity"
              android:weightSum="1">

    <RelativeLayout
        android:padding="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/start_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:id="@+id/startTimeText"
            android:textColor="@android:color/white"
            android:layout_alignBaseline="@+id/startTimeEdit"
            android:layout_alignBottom="@+id/startTimeEdit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:inputType="time"
            android:text="@string/start_time_string"
            android:textColor="@android:color/white"
            android:ems="4"
            android:textSize="26sp"
            android:id="@+id/startTimeEdit"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>


    </RelativeLayout>


    <RelativeLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:background="@color/colorAccent"
            android:text="@string/start_time_string"
            android:textColor="@android:color/white"
            android:ems="4"
            android:textSize="26sp"
            android:id="@+id/endTimeEdit"

            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:text="@string/end_time_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:id="@+id/endTimeText"
            android:textColor="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>


    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:text="@string/addrs_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:id="@+id/addressText"
            android:textColor="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:background="@color/colorAccent"
            android:text="Exampla address 123, Israel"
            android:textColor="@android:color/white"
            android:ems="6"
            android:textSize="26sp"
            android:id="@+id/editAddress"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"/>

    </RelativeLayout>


    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:paddingTop="5dp"
        android:layout_marginTop="16dp">
        <TextView
            android:text="@string/date_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:id="@+id/dateText"
            android:textColor="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:background="@color/colorAccent"
            android:text=""
            android:textColor="@android:color/white"
            android:ems="4"
            android:textSize="26sp"
            android:id="@+id/editDate"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>


    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:paddingTop="3dp"
        android:layout_marginTop="6dp">
        <TextView
            android:text="@string/branch_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:id="@+id/branceText"
            android:textColor="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/colorAccent"
            android:text="Aerobics"
            android:textColor="@android:color/white"
            android:ems="4"
            android:textSize="26sp"
            android:id="@+id/editBranch"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:weightSum="1">

        <TextView
            android:text="@string/desc_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:id="@+id/descText"
            android:textColor="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            />

        <EditText
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/colorAccent"
            android:text="Description...."
            android:textColor="@android:color/white"
            android:ems="10"
            android:textSize="14sp"
            android:id="@+id/editDesc"
            android:layout_weight="0.30"
            android:paddingStart="10dp"
            android:layout_marginLeft="10dp"/>

        <Button
            android:text="@string/update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/updateButton"/>

    </LinearLayout>

    <TextView
        android:text="Update will overwrite the previous data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_red_light"
        android:id="@+id/textDebug"/>

</LinearLayout>
